Zcode funciona con las ultimas versiones de Spring Boot y se genera la documentacion con open-api